ajuste no arquivo de docker-compose.yml e Dockerfile